11845
scala> val f2 = (i: => Int) => 1
<console>:1: error: identifier expected but '=>' found.
       val f2 = (i: => Int) => 1
                    ^

scala> val f2: (=> Int) => Int = (i) => 1
f2: (=> Int) => Int = <function1>
